--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <section class="front-page">
-      <img class="hero" src="./assets/heroine.jpg" alt="therapy" />
+      <img class="hero" src="./heroine.jpg" alt="therapy" />
       <nav>
         <div class="logo">
-          <img src="./assets/logo.png" alt="Venteaselogo" />
+          <img src="./logo.png" alt="Venteaselogo" />
           <h1>Ventease</h1>
         </div>
         <div class="links">
@@ -81,15 +81,15 @@
       <div class="videos">
         <div class="counselling">
         
-          <video muted loop class="video" src="./assets/meditation.mp4"></video>
+          <video muted loop class="video" src="./meditation.mp4"></video>
         </div>
         <div class="therapy">
           <h3>Art Therapy</h3>
-          <video muted loop class="video" src="./assets/help.mp4"></video>
+          <video muted loop class="video" src="./help.mp4"></video>
         </div>
         <div class="meditation">
           <h3>Mindfulness Meditation</h3>
-          <video muted loop class="video" src="./assets/counselling.mp4"></video>
+          <video muted loop class="video" src="./counselling.mp4"></video>
         </div>
       </div>
     </section>
